# PitCollector

./: .gitignore  .gitmodules  Cheat Sheet How To Use It.odt  Pitcam_Readme.docx  README.md  avt_output.txt  get_exposure_time_changes  install.sh  pitcollector.launch  run.sh  sequence_def.json  shit.py
data/: Pin Mapping.xlsx  drone_to_SFM.txt
dependencies/labjack_ljm_software_2019_07_16_x86_64/: INSTALL.md
dependencies/labjack_ljm_software_2019_07_16_x86_64/labjack_ljm_examples/: README.txt
json_sequences/: checkout_sequence.json  exposure_test.json  full_sequence.json  lafarge sequence.json  sequence_of_positions.json  short_test.json  test_run.json
src/: test.py
src/collector/: CMakeLists.txt  package.xml
src/collector/launch/: collector.launch
src/collector/src/: camera.py  collector.py  collector_no_gui.py  labjack.py  labjack_helpers.py  metadata.db  pan_tilt_helpers.py  positions.json  read_json.py  rig.py  rig_x_motor.py  rig_y0_motor.py  rig_y1_motor.py
src/collector/src/OLD/: old.py
src/collector/src/tools/: camera_tools.py  labjack_tools.py  pan_tilt_tools.py
src/hardware/: hardware.launch
src/hardware/labjack_node/: CMakeLists.txt  package.xml
src/hardware/labjack_node/launch/: labjack_t7.launch
src/hardware/labjack_t7_driver/: CMakeLists.txt  README  package.xml
src/hardware/labjack_t7_driver/launch/: labjack.launch
src/hardware/labjack_t7_driver/src/: LJM_Utilities.h  labjack.cpp  labjack.h  labjack_node.cpp  labjack_pinout.h
src/hardware/pan_tilt/: CMakeLists.txt
src/hardware/pan_tilt_84b1b099aac7/: package.xml
(+25 files in other folders)
